# AI-Curriculum

./: README.md
AI-Learning/: .gitignore  README.md  pyproject.toml
AI-Learning/notebooks/module-01-python-foundations/: 01-syntax-and-control-flow.ipynb  02-data-structures.ipynb  03-object-oriented-python.ipynb  04-advanced-python.ipynb  05-file-io-and-error-handling.ipynb  06-python-ecosystem.ipynb
AI-Learning/resources/: reading-list.md
AI-Learning/resources/cheatsheets/: python-swift-cheatsheet.md
AI-Learning/resources/interview-questions/: behavioral-prep.md  llm-and-agents.md  ml-fundamentals.md  rag-system-design.md
AI-Learning/scripts/capstone-01-ml-pipeline/: Dockerfile  README.md  cli.py
AI-Learning/scripts/capstone-02-rag-system/: Dockerfile  README.md  docker-compose.yml  streamlit_app.py
AI-Learning/scripts/capstone-03-ai-agent/: Dockerfile  README.md
AI-Learning/scripts/capstone-04-deployed-system/: Dockerfile  README.md  docker-compose.yml
Python-Learning/: .gitignore  GLOSSARY.md  INTERVIEW_GUIDE.md  README.md  RESOURCES.md  SWIFT_TO_PYTHON_CHEATSHEET.md  pyproject.toml
Python-Learning/01-python-fundamentals/: quiz.md
Python-Learning/01-python-fundamentals/01-syntax-and-types/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/02-control-flow/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/03-data-structures/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/04-functions-and-closures/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/05-oop-and-protocols/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/06-advanced-python/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/07-error-handling-and-io/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/08-modules-packages-tooling/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/09-testing-with-pytest/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/10-async-and-concurrency/: exercises.py  lesson.md  solutions.py  swift_comparison.md
Python-Learning/01-python-fundamentals/project/: README.md  data_analyzer.py  main.py  sample_data.csv  test_analyzer.py
Python-Learning/02-data-science-foundations/: PHASE_2_COMPLETION.md  quiz.md
Python-Learning/02-data-science-foundations/01-numpy-fundamentals/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/02-numpy-advanced/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/03-pandas-basics/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/04-pandas-advanced/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/05-polars-modern-dataframes/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/06-data-visualization/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/07-eda-workflow/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/08-feature-engineering/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/09-math-for-ml/: exercises.py  lesson.md  solutions.py
Python-Learning/02-data-science-foundations/project/: README.md  eda_pipeline.py  sample_data.csv  test_eda.py
Python-Learning/03-machine-learning/: quiz.md
Python-Learning/03-machine-learning/01-ml-fundamentals/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/02-regression/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/03-classification/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/04-tree-models-and-ensembles/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/05-unsupervised-learning/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/06-model-evaluation/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/07-sklearn-pipelines/: exercises.py  lesson.md  solutions.py
Python-Learning/03-machine-learning/08-experiment-tracking-mlflow/: exercises.py  lesson.md  (+1 more)
Python-Learning/04-deep-learning/: CREATION_SUMMARY.txt  quiz.md
Python-Learning/05-llms-and-genai/: COMPLETION_SUMMARY.md  quiz.md
Python-Learning/06-applied-ai-engineering/: COMPLETION_SUMMARY.md  INDEX.md  quiz.md
Python-Learning/06-production-engineering/: COMPLETION_SUMMARY.md  INDEX.md  quiz.md
Python-Learning/07-interview-and-capstone/: INDEX.md  PHASE-7-COMPLETE.md
Python-Learning/07-production-engineering/: INDEX.md
Python-Learning/08-interview-and-capstone/: INDEX.md  PHASE-8-COMPLETE.md  quiz.md
(+225 files in other folders)
