[project]
name = "ai-learning"
version = "0.1.0"
description = "AI/ML Engineering Bootcamp: iOS Engineer → AI Engineer (16-week curriculum)"
requires-python = ">=3.11"
dependencies = [
    # Phase 1: Foundations (Weeks 1-5)
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.1",
    "plotly>=5.18",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "mlflow>=2.10",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
    "pytest>=8.0",
    "ruff>=0.2",
]

[project.optional-dependencies]
# Phase 2: Deep Learning & NLP (Weeks 6-8)
deep-learning = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "transformers>=4.38",
    "datasets>=2.17",
    "tokenizers>=0.15",
    "accelerate>=0.27",
    "evaluate>=0.4",
    "sentencepiece>=0.2",
]

# Phase 3: LLMs, RAG & Agents (Weeks 9-13)
llm = [
    "anthropic>=0.40",
    "openai>=1.12",
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "langchain-anthropic>=0.1",
    "langgraph>=0.0.20",
    "chromadb>=0.4",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.5",
    "tiktoken>=0.6",
    "pydantic>=2.6",
    "ragas>=0.1",
    "rank-bm25>=0.2",
]

# Phase 4: Production & Deployment (Weeks 14-16)
production = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "streamlit>=1.31",
    "httpx>=0.27",
    "peft>=0.8",
    "bitsandbytes>=0.42",
    "wandb>=0.16",
    "docker>=7.0",
    "guardrails-ai>=0.4",
]

# All dependencies
all = [
    "ai-learning[deep-learning]",
    "ai-learning[llm]",
    "ai-learning[production]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
