[project]
name = "python-learning"
version = "0.1.0"
description = "Python & AI/ML Engineering Curriculum — from Swift developer to AI/ML engineer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Base dependencies (Phase 1)
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "rich>=13.0",
    "typer>=0.12",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.optional-dependencies]
# Phase 2: Data Science
data-science = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "scipy>=1.13",
    "ydata-profiling>=4.8",
]

# Phase 3: Machine Learning
ml = [
    "python-learning[data-science]",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "mlflow>=2.14",
    "joblib>=1.4",
]

# Phase 4: Deep Learning
deep-learning = [
    "python-learning[ml]",
    "torch>=2.3",
    "torchvision>=0.18",
    "torchaudio>=2.3",
    "tensorboard>=2.17",
]

# Phase 5: LLMs & Generative AI
llm = [
    "python-learning[deep-learning]",
    "anthropic>=0.30",
    "openai>=1.35",
    "tiktoken>=0.7",
    "transformers>=4.42",
    "datasets>=2.20",
    "accelerate>=0.31",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "faiss-cpu>=1.8",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "langgraph>=0.1",
    "ragas>=0.1",
]

# Phase 6: Applied AI Engineering
applied-ai = [
    "python-learning[llm]",
    "streamlit>=1.35",
    "gradio>=4.30",
    "litellm>=1.40",
    "instructor>=1.3",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "tenacity>=8.3",
    "logfire>=0.50",
]

# Phase 7: Production
production = [
    "python-learning[applied-ai]",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sse-starlette>=2.1",
    "prometheus-client>=0.20",
    "structlog>=24.2",
]

# Install everything
all = [
    "python-learning[production]",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["python_learning"]

[tool.pytest.ini_options]
testpaths = ["tests", "01-python-fundamentals", "02-data-science-foundations"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
